--- a/src/course/en/components.json
+++ b/src/course/en/components.json
@@ -568,7 +568,7 @@
     "_layout": "left",
     "title": "Adapt Assessment",
     "displayTitle": "Welcome to Adapt Assessment",
-    "body": "Find out more about the assessment functionality, including an improved results feature. In this Adapt assessment, you have feedback for every try, a button for reviewing questions, and certificate.<br> The animated background uses Lottie. To access Lottie animations, visit the official Lottie site at <a href='https://lottiefiles.com/' target='_blank'>https://lottiefiles.com/</a>. It can be set as the background of a block and run continuously. This differs from Lottie's component, as it is not interactive and cannot be controlled by scrolling.",
+    "body": "Find out more about the assessment functionality, including an improved results feature. In this Adapt assessment, you have feedback for every try, a button for reviewing questions, and certificate.<br> The animated background uses Gif made from Lottie. To access Lottie animations, visit the official Lottie site at <a href='https://lottiefiles.com/' target='_blank'>https://lottiefiles.com/</a>. It can be set as the background of a block and run continuously.",
     "instruction": "",
     "_pageLevelProgress": {
       "_isEnabled": true
