--- a/src/course/en/components.json
+++ b/src/course/en/components.json
@@ -568,7 +568,7 @@
     "_layout": "left",
     "title": "Adapt Assessment",
     "displayTitle": "Welcome to Adapt Assessment",
-    "body": "Find out more about the assessment functionality, including an improved results feature. In this Adapt assessment, you have feedback for every try, a button for reviewing questions, and certificate.<br> The animated background uses Gif made from Lottie. To access Lottie animations, visit the official Lottie site at <a href='https://lottiefiles.com/' target='_blank'>https://lottiefiles.com/</a>. It can be set as the background of a block and run continuously.",
+    "body": "Find out more about the assessment functionality, including an improved results feature. In this Adapt assessment, you have feedback for every try, a button for reviewing questions, and certificate.<br> The animated background uses Lottie. To access Lottie animations, visit the official Lottie site at <a href='https://lottiefiles.com/' target='_blank'>https://lottiefiles.com/</a>.",
     "instruction": "",
     "_pageLevelProgress": {
       "_isEnabled": true
@@ -620,10 +620,54 @@
       }
     }
   },
- 
+  {
+    "_id": "c-81",
+    "_parentId": "b-55",
+    "_type": "component",
+    "_component": "lottieInteractivity",
+    "_classes": "big_lottie",
+    "_layout": "right",
+    "title": "",
+    "displayTitle": "",
+    "body": "",
+    "instruction": "",
+    "_setCompletionOn":"inview",
+    "_lottie": {
+      "src": "course/en/assets/dots.json",
+      "controls": false,
+      "loop": -1,
+      "autoplay": false,
+      "speed": 1,
+      "style": "",
+      "renderer": "svg",
+      "preserveAspectRatio": "xMidYMid meet",
+      "background": "",
+      "failed": "Error loading animation",
+      "interactivity": {
+        "mode": "scroll",
+        "actions": [
+          {
+            "visibility": [
+              0.1,
+              0.9
+            ],
+            "type": "seek",
+            "frames": [
+              1,
+              105
+            ]
+          }
+        ]
+      }
+    },
+    "description": "",
+    "_pageLevelProgress": {
+      "_isEnabled": true
+    }
+  },
   {
     "_id": "c-85",
-    "_parentId": "b-56",
+    "_parentId": "b-55",
     "_type": "component",
     "_component": "text",
     "_classes": "",
